<resources>
    <string name="app_name">GigaFile</string>

    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="cloud">Cloud</string>
    <string name="clean">Clean</string>

    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="move_to_folder">Move to folder</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="copy">Copy</string>
    <string name="cut">Cut</string>
    <string name="compress">Compress</string>
    <string name="hide">Hide</string>

    <string name="create_folder">Create a new folder</string>
    <string name="clear_field">Clear a field</string>
    <string name="enter_folder_name">Enter Folder Name</string>
    <string name="enter_new_folder_name">Enter New Folder Name</string>
    <string name="delete_prompt">Are you sure to delete?</string>

    <string name="new_folder">New Folder</string>
    <string name="new_folder_name">New Folder Name</string>
</resources>