<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/enter_folder_name"
                android:textColor="?android:attr/textColorLink"
                android:textSize="20sp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="?android:attr/textColorHighlight"
                app:boxStrokeColor="?android:attr/textColorLink"
                app:cursorColor="@color/white"
                app:endIconMode="clear_text"
                app:endIconContentDescription="@string/clear_field"
                app:endIconTint="?android:attr/textColorLink"
                app:counterEnabled="true"
                app:counterMaxLength="120"
                app:counterTextColor="?android:attr/textColorLink"
                android:hint="@string/new_folder"
                app:hintAnimationEnabled="true"
                app:hintTextColor="?attr/colorOnPrimaryFixedVariant"
                android:textColorHint="@color/white">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/cancel"
                    android:textColor="?android:attr/textColorLink"
                    style="@style/Widget.Material3.Button.ElevatedButton"/>

                <Button
                    android:id="@+id/createButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:text="@string/create"
                    android:textColor="@color/white"
                    android:backgroundTint="?android:attr/textColorLink"
                    style="@style/Widget.Material3.Button.ElevatedButton"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>